Support kafka sql snapshotting (#4665)
* Add basic structure for kafkasql snapshotting

* Use strimzi container for testing

* Add snapshot creation and basic testing structure

* Implement restoring h2 database from snapshot

* Improve snapshot creation process

* Finish coordination mechanism for snapshot creation and add snapshot creation test

* Make the replica that triggered the snapshot actually create it

* Add some log messages to improve traceability

* Fix snapshotting unit test

* Enable ryuk in ci

* Randomize db test url

* Fix registry loader

* Add kafkasql snapshotting integration tests
