# app/src/main/java/io/apicurio/registry/storage/impl/sql/SQLServerSqlStatements.java
@@ -144,4 +144,14 @@ public class SQLServerSqlStatements extends CommonSqlStatements {
     public String deleteAllOrphanedContent() {
         return "DELETE FROM content WHERE NOT EXISTS (SELECT 1 FROM versions v WHERE v.contentId = contentId )";
     }
+
+    @Override
+    public String createDataSnapshot() {
+        throw new IllegalStateException("Snapshot creation is not supported for Sqlserver storage");
+    }
+
+    @Override
+    public String restoreFromSnapshot() {
+        throw new IllegalStateException("Restoring from snapshot is not supported for Sqlserver storage");
+    }
 }
